2013-06-18 Alessandro Scalzo <alessandro.scalzo@iit.it>
    * src/libYARP_OS/include/yarp/os/impl/RunProcManager.h
    * src/libYARP_OS/src/RunProcManager.cpp
    * src/libYARP_OS/src/RunCheckpoints.cpp
    * src/libYARP_OS/src/Run.cpp

    Zombie hunter function has now its own thread.

2013-05-27 Lorenzo Natale <lorenzo.natale@iit.it>
    * src/libYARP_dev/include/yarp/dev/CartesianControl.h:
    added methods to deal with tip frame.

2013-05-02 Lorenzo Natale <lorenzo.natale@iit.it>
    * src/libYARP_sig/harness/MatrixTest.cpp
    * src/libYARP_sig/include/yarp/sig/Matrix.h
    * src/libYARP_sig/src/Matrix.cpp
    
    fixed bug on Matrix::resize(), added regression tests.
    Clean up: tabs->spaces [thanks Juan G Victores].

2013-04-16 Alessandro Scalzo <alessandro.scalzo@iit.it>
    * src/libYARP_OS/include/yarp/os/impl/RunProcManager.h
    * src/libYARP_OS/include/yarp/os/impl/RunReadWrite.h
    * src/libYARP_OS/src/RunReadWrite.cpp
    * src/libYARP_OS/src/Run.cpp
    * src/libYARP_OS/src/RunProcManager.cpp
    Changed waitpid policy (non-blocking) in Linux version.

2013-04-09  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* bindings/yarp.i: patch from Stephane to fix a C# bindings issue
	related to the Value class, and to add translation of Sound
	classes [thanks Stephane Lallee]

2013-04-02  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/yarpserver/CMakeLists.txt, conf/YarpSystemCheck.cmake: Arnaud
	noted existence of CMAKE_DL_LIBS, even better [thanks Arnaud Degroote]

	* src/yarpserver/CMakeLists.txt, conf/YarpSystemCheck.cmake: don't
	link against dl on unix flavors that don't have it
	[thanks Arnaud Degroote]

2013-03-28  Alessandro Scalzo <alessandro.scalzo@iit.it>
    * src/libYARP_OS/include/yarp/os/impl/RunCheckPoints.h
    * src/libYARP_OS/src/RunCheckPoints.cpp
    * src/libYARP_OS/CMakeLists.txt

    Added ENABLE_YARPRUN_LOG option to cmake configuration options.

2013-05-01 Ugo Pattacini <ugo.pattacini@iit.it>