@@ -1,3 +1,9 @@
+2013-07-01 Marco Randazzo <marco.randazzo@iit.it>
+    * src/libYARP_dev/include/yarp/dev/ControlBoardPid.h
+    * src/libYARP_dev/src/ControlBoardPid.cpp
+    
+    added Kff feedforward gain to Pid 
+    
 2013-06-18 Alessandro Scalzo <alessandro.scalzo@iit.it>
     * src/libYARP_OS/include/yarp/os/impl/RunProcManager.h
     * src/libYARP_OS/src/RunProcManager.cpp
